# glucoach

./: .gitignore  Cargo.toml  README.md  flake.nix
glucoach-api/: Cargo.toml  default.nix
glucoach-api/src/: extractors.rs  main.rs  routes.rs
glucoach-lib/: Cargo.toml
glucoach-lib/src/: config.rs  jwks.rs  lib.rs  state.rs  token.rs
glucoach-web/: .gitattributes  .prettierrc.json  default.nix  package-lock.json  package.json  pnpm-lock.yaml
glucoach-web/app/: layout.tsx  page.tsx
supabase/: config.toml
