[workspace]
members = ["glucoach-api", "glucoach-lib"]
exclude = ["glucoach-web"]
resolver = "3"

[workspace.package]
authors = ["owo93 <iztyle30@gmail.com>"]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
axum = { version = "0.8.9", features = ["tracing"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
anyhow = "1.0.103"
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.150"
