[workspace]
members = ["glucoach-api", "glucoach-lib"]
exclude = ["glucoach-web"]
resolver = "3"

[workspace.package]
authors = ["owo93 <iztyle30@gmail.com>"]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
axum = { version = "0.8.9", features = ["tracing"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
anyhow = "1.0.103"
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
] }
uuid = { version = "1.23.4", features = ["serde", "v4"] }
reqwest = { version = "0.13.4", features = ["http2", "rustls", "json"] }
thiserror = "2.0.18"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
arc-swap = "1.9.2"
chrono = { version = "0.4.45", features = ["serde"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
