[package]
name = "glucoach-api"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
glucoach-lib = { path = "../glucoach-lib" }
axum.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
reqwest.workspace = true
